--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,24 @@ board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+build_flags =
+  -Os
+  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+  -DUSER_SETUP_LOADED=1
+  -DST7735_DRIVER=1
+  -DST7735_GREENTAB3=1
+  -DTFT_WIDTH=128
+  -DTFT_HEIGHT=128
+  -DTFT_MOSI=D7
+  -DTFT_SCLK=D5
+  -DTFT_CS=D2
+  -DTFT_DC=D1
+  -DTFT_RST=-1
+  -DLOAD_GLCD=1
+  -DSPI_FREQUENCY=27000000
+  -DLOAD_FONT8=1
+  -DLOAD_FONT7=1
+  -DLOAD_FONT6=1
+  -DLOAD_FONT4=1
+  -DLOAD_FONT2=1
+  -DSMOOTH_FONT=1
